--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ django-mssql-backend==2.8.1
 djlint==1.36.1
 EditorConfig==0.12.4
 exceptiongroup==1.2.2
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 jsbeautifier==1.15.1
 json5==0.9.28
 numpy==2.2.3
 outcome==1.3.0.post0
+packaging==24.2
 pathspec==0.12.1
 pycparser==2.22
 pyodbc==5.2.0
